--- a/styles.css
+++ b/styles.css
@@ -80,8 +80,8 @@ section {
 
 .courses ol {
     list-style-type: decimal;
-    margin: 0;
-    padding: 0;
+    margin: 10px;
+    padding: 10;
     counter-reset: course-counter;
 }
 
@@ -103,11 +103,12 @@ section {
     text-decoration: none;
     color: #111827; /* Black */
     font-size: 18px;
+    transition: color 0.3s, box-shadow 0.3s, transform 0.3s;
 }
 
 .courses li a:hover {
     color: #0EA5E9; /* Teal */
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .course-description {
