--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: cursive;
     background-color: #1C1C1D; /* Dark Gray */
     margin: 0;
     padding: 0;
