--- a/global.css
+++ b/global.css
@@ -7,6 +7,10 @@ body {
 }
 
 .navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    overflow-x: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -15,6 +19,7 @@ body {
     width: 100%; /* Make the navbar full width */
     height: 65px;
     box-sizing: border-box; /* Ensure padding is included in the width */
+    border-bottom: 1px solid #DEE1E4;
 }
 
 .logo {
