--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,19 @@ body {
 }
 
 .navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    overflow-x: hidden;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #262829; /* Dark Gray */
+    background-color: #262829; /* Dark Blue */
     padding: 10px 20px;
     width: 100%; /* Make the navbar full width */
+    height: 65px;
     box-sizing: border-box; /* Ensure padding is included in the width */
+    border-bottom: 1px solid #DEE1E4;
 }
 
 .logo {
